<resources>
    <string name="app_name">Plant Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="option_one">Opcion 1</string>
    <string name="option_two">Opcion 2</string>
    <string name="option_three">Opcion 3</string>
    <string name="option_four">Opcion 4</string>
    <string name="open_camera">Abrir camara</string>
    <string name="open_photo_gallery">Seleccion de galeria</string>
    <string name="ok_text">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="dialog_title">Sin conexion</string>
    <string name="dialog_content">Por favor revise su conexion a internet e intente nuevamente</string>
    <string name="right_answer">Respuesta Correcta</string>
    <string name="wrong_answer">Respuesta incorrecta</string>
</resources>
