<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="com.app.simpleplantquiz.activity.MainActivity">

    <ImageView
            android:id="@+id/imgTaken"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgTaken"
            android:weightSum="1" android:id="@+id/linearLayout3">

        <Button
                android:id="@+id/btnOpenCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_camera"
                android:background="@drawable/button_border_light"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:textColor="@android:color/white"
                android:layout_weight="0.5"/>

        <Button
                android:id="@+id/btnOpenPhotoGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_photo_gallery"
                android:background="@drawable/button_border_light"
                android:textColor="@android:color/white"
                android:layout_marginEnd="25dp"
                android:layout_weight="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnOpenCamera"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/linears_separations"
                android:orientation="vertical">

            <Button
                    android:id="@+id/button1"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:background="@drawable/button_border_light"
                    android:layout_marginBottom="@dimen/buttons_separation"
                    android:text="@string/option_one"
                    android:textColor="@android:color/white"/>

            <Button
                    android:id="@+id/button2"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:background="@drawable/button_border_light"
                    android:layout_marginBottom="@dimen/buttons_separation"
                    android:text="@string/option_two"
                    android:textColor="@android:color/white"/>

            <TextView
                    android:id="@+id/txtWrongAnswers"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/wrong_image"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                    android:id="@+id/button3"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="@dimen/buttons_separation"
                    android:background="@drawable/button_border_light"
                    android:text="@string/option_three"
                    android:textColor="@android:color/white"/>

            <Button
                    android:id="@+id/button4"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:background="@drawable/button_border_light"
                    android:layout_marginBottom="@dimen/buttons_separation"
                    android:text="@string/option_four"
                    android:textColor="@android:color/white"/>

            <TextView
                    android:id="@+id/txtRightAnswers"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/correct_image"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/fab_margin"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_menu_rotate"
                android:focusable="true"/>

        <TextView
                android:id="@+id/txtState"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayoutProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B0000000"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>